# custom-library-vapi

./: README.md  meson.build
src/: cube.c  main.vala  meson.build  square.c  triple.c
vapi/: utils.vapi
